
@startuml
skinparam class {
	BackgroundColor #FFFFFF
	ArrowColor #000000
	BorderColor #000000
	BorderColor<<InnerType>> #777777
	BackgroundColor<<InnerType>> #EEEEEE
	BackgroundColor<<GidType>> #e4ffd4
	FontName Courier
	FontSize 12
}
skinparam note {
	BackgroundColor #dedede
	BorderColor #000000
	FontSize 10
}
skinparam classAttribute {
	FontName Courier
	FontSize 12
}
class Comment  << ( ,#ff0000) >> {
    -date: java.util.Date
    -text: String
    -user: String
}
class Document <<GidType>> << ( ,#ff00ff) >> {
    -<color:#ff0000 ><b>comments: java.util.List<Comment></b></color>
    -date: java.util.Date
    -gid: String
    -icon: String
    -path: String
    -preview: String
    -tags: java.util.List<String>
    -<color:#0000ff ><b>type: Document_type</b></color>
}
class Document_type <<GidType>> << ( ,#0000ff) >> {
    -active: Boolean
    -comment: String
    -gid: String
    -text: String
}
class Tag <<GidType>> << ( ,#007f00) >> {
    -color: String
    -comment: String
    -created: java.util.Date
    -gid: String
    -text: String
}
hide methods
Document *-- "many" Comment #ff0000
Document *--  Document_type #0000ff
footer powered by plantuml, created with jsonCodeGen
@enduml
